feat: cors options edit